tests/paczka2/big_fuzzy/72726049.err
Error in line 2: A557 A509 3,0
Error in line 6: crKPMnf5mB S814 17,1
Error in line 5: ZahzHC2 A835 43,2
Error in line 20: ZahzHC2 A557 16,9
Error in line 25: uV69fOyIHiG A:35 70,:
Error in line 23: ZahzHC2 A835 92,5
Error in line 24: crKPMnf5mB A835 49,9
Error in line 38: uV69fOyIHiG A509 72,9
Error in line 41: t18M A557 46,3
Error in line 37: crKPMnf5mB A509 585,5
Error in line 84: ZahzHC2 A557 86,9
Error in line 90: A557 A557 27,1
Error in line 81: uOjFJ3zJ A509 1,4
Error in line 93: A557 A509 26,4
Error in line 97: A557 S814 12,0
Error in line 109: 5ueLauC3Ng A509 15,5
Error in line 120: uV69fOyIHiG S814 68,76
Error in line 115: uV69fOyIHiG A835 243,5
Error in line 125: 5ueLauC3Ng A509 42,0
Error in line 124: uV69fOyIHiG S814 141,3
Error in line 116: t18M A557 11,4
Error in line 117: crKPMnf5mB S814 30,6
Error in line 132: ZahzHC2 A509 800,4
Error in line 134: uOjFJ3zJ A509 6,0
Error in line 131: t18M S814 23,2
Error in line 139: uOjFJ3zJ A835 5,8
Error in line 148: t18M A509 84,5
Error in line 147: uOjFJ3zJ S814 86,1
Error in line 160: ZahzHC2 S814 90,1
Error in line 153: uOjFJ3zJ A835 21,3
Error in line 176: 5ueLauC3Ng A835 10,2
Error in line 180: 5ueLauC3Ng A557 81,9
Error in line 166: A557 S814 71,4
Error in line 181: 5ueLauC3Ng A509 35,7
Error in line 190: uOjFJ3zJ A509 63,1
Error in line 141: uV69fOyIHiG A509 0,3
Error in line 207: t18M A557 23,7
Error in line 197: uOjFJ3zJ A835 97,3
Error in line 214: uOjFJ3zJ S814 -1,5
Error in line 212: uOjFJ3zJ S814 24,7
Error in line 204: 5ueLauC3Ng A509 183,3
Error in line 218: 5ueLauC3Ng S814 20,9
Error in line 216: ZahzHC2 A557 38,2
Error in line 189: crKPMnf5mB A835 19,3
Error in line 241: t18M A835 75,8
Error in line 244: t18M S814 28,7
Error in line 249: uOjFJ3zJ A83K 97,4
